[package]
name = "banjin"
version = "0.3.0"
authors = ["Douman <douman@gmx.se>"]
description = "Savage and simple parser"
readme = "README.md"
repository = "https://github.com/DoumanAsh/banjin"
license = "Apache-2.0"
keywords = ["parser"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"

[features]
#When enabled generates code for no_std env
no_std = []
